# tepindb

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  biome.json  plan.md
.claude/: settings.json
.claude/hooks/: engram-brief.sh
.claude/skills/engram/: SKILL.md
.claude/skills/engram-digest/: SKILL.md
.github/workflows/: ci.yml  draft-release.yml  release.yml
docs/: errors.md  format-stability.md  serving.md
examples/notes-app/: Cargo.toml
examples/notes-app/src/: main.rs
examples/notes-app/tests/: flow.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: preamble.rs
npm/: stamp.mjs
npm/platform/darwin-arm64/: package.json
npm/platform/linux-x64/: package.json
npm/platform/win32-x64/: package.json
npm/tepin/: package.json
npm/tepindb/: README.md  package.json
tepin/: Cargo.toml
tepin-cli/: Cargo.toml
tepin-cli/src/: main.rs  mcp.rs
tepin-cli/tests/: cli.rs  mcp.rs
tepin-core/: Cargo.toml
tepin-core/src/: chunk.rs  db.rs  embed.rs  error.rs  format.rs  fts.rs  id.rs  index.rs  lib.rs  migrate.rs  vector.rs
tepin-core/src/serve/: client.rs  host.rs  mod.rs  sidecar.rs  wire.rs
tepin-core/tests/: chunking.rs  embedding_pipeline.rs  hybrid_search.rs  migrate.rs  primitives.rs  serving.rs  validation.rs
tepin-core/tests/fixtures/: v0.expected.json
tepin-embed/: Cargo.toml
tepin-embed/src/: fetch.rs  lazy.rs  lib.rs  onnx.rs
tepin-embed/tests/: real_model.rs
tepin/src/: lib.rs
tepindb/: Cargo.toml
tepindb/examples/: quickstart.rs  vector_search.rs
tepindb/src/: lib.rs
tepindb/tests/: real_search.rs
