[workspace]
resolver = "2"
members = ["tepin-core", "tepin-embed", "tepin-cli", "tepindb", "examples/notes-app"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["tepindb contributors"]

[workspace.dependencies]
redb = "4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
getrandom = "0.4"
clap = { version = "4.6", features = ["derive", "env"] }
