[package]
name = "tepin-core"
description = "AI-first single-file database for CLI tools — core engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = "3"
