[package]
name = "tepin-core"
description = "AI-first single-file database for CLI tools — core engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

[features]
# In-driver serving (docs/serving.md): a lock-holding open can host reads
# for other processes over a local socket, and a locked-out open can
# discover and use that host. Off = today's pure-embedded behavior only.
default = ["serve"]
serve = ["dep:interprocess"]

[dependencies]
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
interprocess = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
