[package]
name = "tepin-embed"
description = "Embedding layer for TepinDB — ONNX + bge-small behind a feature flag"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
# Pulls in onnxruntime (via ort) and the model plumbing. Off by default so
# slim builds (npx) stay small; the model itself is never bundled — it is
# lazy-downloaded and SHA-256-verified (see fetch.rs).
onnx = ["dep:ort", "dep:tokenizers", "dep:ureq", "dep:sha2"]

[dependencies]
tepin-core = { path = "../tepin-core", version = "0.1.0" }
ort = { version = "=2.0.0-rc.12", optional = true }
tokenizers = { version = "0.23", optional = true }
ureq = { version = "3", optional = true }
sha2 = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3"
